--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@fontsource/montserrat": "^5.2.5",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.3.1",
     "@mui/x-date-pickers-pro": "^8.3.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.0",
