--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/montserrat": "^5.2.5",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@mui/x-date-pickers-pro": "^8.3.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.0",
+    "react-router-dom": "^6.30.1",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
