--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@mui/x-date-pickers-pro": "^8.3.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.10.0",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.15.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
